# shipsafe-cargodb

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
agent/: ais_stream.py  config.py  critic.py  db.py  gemini_client.py  mcp_client.py  orchestrator.py  secrets.py  server.py
agent/specialists/: decision_reasoner.py  index_manager.py  manifest_auditor.py  memory_recall.py  memory_writer.py  migration_guardian.py  performance_advisor.py  schema_harmonizer.py
cli/: main.py  package.json
dashboard/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: MemoryBrowser.tsx  PendingApprovals.tsx  SchemaDriftPanel.tsx  VectorSimilarity.tsx
demo/: hormuz_fixtures.py  seed_atlas.py
docs/: DEVPOST.md
terraform/: main.tf  variables.tf
tests/: test_critic.py  test_index_manager.py  test_manifest_auditor.py  test_mcp_client.py  test_memory_recall.py  test_memory_writer.py  test_migration_guardian.py  test_orchestrator.py  test_performance_advisor.py  test_schema_harmonizer.py  test_server.py
